--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,13 @@ body {
   font-weight: 400;
   font-size: 16px;
 }
+
+.container {
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
 .main-title {
   color: white;
   text-align: center;
@@ -17,13 +24,53 @@ body {
 ul,
 ol {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
 }
 
 a {
   text-decoration: none;
 }
 
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
+.main-menu {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.contacts-list {
+  gap: 40px;
+  display: flex;
+  align-items: center;
+}
+
 .menu-link {
+  display: block;
+  padding: 24px 0;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
@@ -44,6 +91,11 @@ a {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+}
+
+.header-logo {
+  padding: 24px 0;
+  margin-right: 76px;
 }
 
 .logo-text {
@@ -87,9 +139,12 @@ a {
 
 .contacts {
   font-style: normal;
+  margin-left: auto;
 }
 
-.contact-link {
+.contacts-link {
+  display: block;
+  padding: 24px 0;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
