--- a/css/styles.css
+++ b/css/styles.css
@@ -280,9 +280,17 @@ h3,
 }
 
 .portfolio-caption {
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
   padding: 32px 16px;
-  text-align: left;
-  border: 1px solid #e7e9fc;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+}
+.portfolio-title {
+  padding-bottom: 72px;
 }
 
 /* ================== FOOTER ================== */
@@ -290,6 +298,8 @@ h3,
 .page-footer {
   background-color: #2e2f42;
   color: #f4f4fd;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .footer-text {
@@ -297,8 +307,10 @@ h3,
   letter-spacing: 0.02em;
   color: #f4f4fd;
   margin-top: 16px;
+  max-width: 264px;
 }
 
 .footer-logo-text {
   color: #f4f4fd;
+  display: inline-block;
 }
