--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,10 @@ a {
   text-decoration: none;
 }
 
+img {
+  display: block;
+}
+
 /* ================== CONTAINER ================== */
 
 .container {
@@ -170,6 +174,7 @@ h3,
 .hero-section {
   background-color: #2e2f42;
   display: flex;
+  padding: 188px 0;
 }
 
 .hero-title {
@@ -198,6 +203,7 @@ h3,
   width: 169px;
   height: 56px;
   margin: 0 auto;
+  min-width: 169px;
 }
 
 .order-button:hover,
@@ -240,19 +246,24 @@ h3,
   background-color: #f4f4fd;
 }
 
+.conteiner-team {
+  padding: 32px 0;
+}
+
 .team-item {
   background-color: #ffffff;
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-title {
   padding: 120px 0;
+  margin-bottom: 72px;
 }
 
 .team-list {
   display: flex;
   align-items: center;
   gap: 24px;
-  border-radius: 0 0 4px 4px;
   padding-bottom: 120px;
 }
 
@@ -291,6 +302,7 @@ h3,
 }
 .portfolio-title {
   padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 
 /* ================== FOOTER ================== */
@@ -308,6 +320,11 @@ h3,
   color: #f4f4fd;
   margin-top: 16px;
   max-width: 264px;
+}
+
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .footer-logo-text {
