--- a/css/styles.css
+++ b/css/styles.css
@@ -247,7 +247,13 @@ h3,
 }
 
 .team-container {
-  padding: 32px 0;
+  .team-container {
+    padding: 32px 0;
+    max-width: 1158px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .team-item {
@@ -280,7 +286,7 @@ h3,
 /* ================== PORTFOLIO SECTION ================== */
 
 .portfolio {
-  pad: 120px 0;
+  padding: 120px 0;
 }
 
 .portfolio-list {
