--- a/css/styles.css
+++ b/css/styles.css
@@ -255,7 +255,7 @@ h3,
 }
 
 .team-title {
-  padding: 120px 0;
+  /* padding: 120px 0; */
   margin-bottom: 72px;
 }
 
@@ -263,7 +263,7 @@ h3,
   display: flex;
   align-items: center;
   gap: 24px;
-  padding-bottom: 120px;
+  /* padding-bottom: 120px; */
 }
 
 .team-item-subtitle {
@@ -300,7 +300,7 @@ h3,
   flex-direction: column;
 }
 .portfolio-title {
-  padding-bottom: 72px;
+  /* padding-bottom: 72px; */
   margin-bottom: 72px;
 }
 
@@ -317,7 +317,7 @@ h3,
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  margin-top: 16px;
+  padding-top: 16px;
   max-width: 264px;
 }
 
